--- a/03_implementation.tex
+++ b/03_implementation.tex
@@ -294,13 +294,16 @@ Instead of retrieving each row, one by one, like we did using \texttt{Base.sum},
 \subsubsection{Vectorized and Devectorized code}
 The second issue I want to discuss that is concerning efficient- VS readable- and elegant code, is vectorized and devectorized code. The difference between vectorized and devectorized code can be quickly explained by an example. Consider two vectors \textbf{x} and \textbf{y} of the same length. If we want to element-wise multiply the elements in the two vectors we can either use the vectorized method: \texttt{z = x .* y}, or we can loop through the vectors in the devectorized method:
 \lstinputlisting{code/devectorizedExample.jl}
-In a blog post, the former Julia developer John Myles White explains how Julia is faster at executing devectorized code compared to vectorized code\emph{\citep{Vectorization}}. This is in sharp contrast to other mathematical programming languages like MATLAB, where you have to vectorize your code to get the best performance. In the case for MATLAB the reason for this is that when you vectorize your code, it uses optimized code in C to execute the calculations. If you devectorize your code you bring in a lot of extra overhead that follows when you write for-loops in MATLAB. This is not the case with for-loops in Julia as they are close to matching C's speed. So you might say that "why not devectorize all the code?" And that could indeed be done, but here we have another example of the conflict between efficient- and readable code. From the example with element-wise multiplication of the two vectors the vectorized form is much more compact and readable, but according to White, the devectorized version is faster. To make a decision whether to implement vectorized or devectorized, we need to know more specifically what the differences are. White's blog post is from 2013, and since then, the vectorization in Julia has improved. Steven G. Johnson has written a newer blog post from 2017 \emph{\citep{MoreDotsJuliaBlog}}, where he closer explains the reason why it is difficult to obtain the same speed for vectorized code as we have for devectorized code in a language like Julia where loops are efficiently compiled and do not have extra overhead. Consider two different vector functions $f$ and $g$ we want to element-wise multiply together:
+In a blog post, the former Julia developer John Myles White explains how Julia is faster at executing devectorized code compared to vectorized code\emph{\citep{Vectorization}}. This is in sharp contrast to other mathematical programming languages like MATLAB, where you have to vectorize your code to get the best performance. In the case for MATLAB the reason for this is that when you vectorize your code, it uses optimized code in C to execute the calculations. If you devectorize your code you bring in a lot of extra overhead that follows when you write for-loops in MATLAB. This is not the case with for-loops in Julia as they are close to matching C's speed. So you might say that "why not devectorize all the code?" And that could indeed be done, but here we have another example of the conflict between efficient- and readable code. From the example with element-wise multiplication of the two vectors, the vectorized form is much more compact and readable, but according to White, the devectorized version is faster. To make a decision whether to implement vectorized or devectorized, we need to know more specifically what the differences are. White's blog post is from 2013, and since then, the vectorization in Julia has improved. Steven G. Johnson has written a newer blog post from 2017 \emph{\citep{MoreDotsJuliaBlog}}, where he closer explains the reason why it is difficult to obtain the same speed for vectorized code as we have for devectorized code in a language like Julia. To explain this, consider two different vector functions $f$ and $g$ that we want to element-wise multiply together:
 \begin{equation*}
     h(x,y) = f(x) \cdot g(y), \hspace{3em} f(x) = \exp(x), \hspace{3em} g(y) = \log(y).
 \end{equation*}
-This example is for explaining purposes only and the functions are not meant to have any applied meaning. Since $f$ and $g$ are vector functions, $x$ and $y$ are vectors and we want to take the exponential and the logarithm element-wise to these vectors. In Julia, there are now three ways of obtaining h(x,y). First we have the devectorized version where 
+This example is for explaining purposes only and the functions are not meant to have any applied meaning. Since $f$ and $g$ are vector functions, $x$ and $y$ are vectors and we want to take the exponential and the logarithm element-wise to these vectors. In Julia, there are now three ways of obtaining $h(x,y)$. First we have the devectorized version 
 \lstinputlisting{code/devectorizedFunctionEx.jl}
-\lstinputlisting{code/}
+According to White, this should be the fastest way of obtaining $h(x,y)$. Secondly we have the method of vectorizing the functions $f$ and $g$ such that we can call the functions with vectors and they will be performed element-wise to the input variables. I have called this method \texttt{dotsInside}:
+\lstinputlisting{code/dotsInsideEx.jl}
+Lastly we do not vectorize the functions $f$ and $g$ but when we call them with the
+\lstinputlisting{code/dotsOutsideEx.jl}
 
 Ordinary vectorized code is fast, but not as fast as a hand-written loop (assuming loops are efficiently compiled, as in Julia) because each vectorized operation generates a new temporary array and executes a separate loop, leading to a lot of overhead when multiple vectorized operations are combined.
 
@@ -312,9 +315,9 @@ Ordinary vectorized code is fast, but not as fast as a hand-written loop (assumi
     \begin{tabular}{cccc}
     \textbf{Function} & \textbf{Number of Allocations} & \textbf{Megabytes} & \textbf{Seconds} \\
         \hline
-         \texttt{dotsOutside} & 2000 & 789 & 2.551 \\  
-         \texttt{dotsInside} & 6000 & 2 405 & 3.252 \\ 
          \texttt{devectorized} & 2000 & 789 & 2.571 \\
+         \texttt{dotsInside} & 6000 & 2 405 & 3.252 \\ 
+         \texttt{dotsOutside} & 2000 & 789 & 2.551 \\  
          \hline
     \end{tabular}
 \end{table}
