--- a/06_local_AD.tex
+++ b/06_local_AD.tex
@@ -5,7 +5,9 @@ This chapter will consider a different approach on how to use AD to solve PDEs. 
 \section{Implementation}
 To get a better understanding of how Local AD works, it is best to look at how it is implemented. Like for \texttt{FAD} and \texttt{CJAD} I have implemented local AD using a struct I have called \texttt{LAD}:
 \lstinputlisting{code/LAD_structSimple.jl}
-Since we now only operate on one cell at the time the implementation of Local AD is simpler than for \texttt{FAD} and \texttt{CJAD}. The value of the AD-variable is now only a scalar and the Jacobian matrices is replaced by a vector of derivatives. For the single phase flow solver in \autoref{ch:FlowSolver}, the vector will be of length one, as each cell only contain one variable (pressure). The implementation is however with \texttt{derivatives} as a vector. This is for the opportunity to implement more complex simulations like a two or three phase simulation where each cell can contain water, oil and/or gas \todo{legg til referanse her om to-fase simulering blir vellykket}. The implementation of operators for the \texttt{LAD} struct is done similar as explained in \autoref{ch:Implementation} for \texttt{FAD} and \texttt{CJAD}, but since we only have a vector of derivatives instead of a Jacobian matrix, the implementation is easier and follows the lines of the description from \autoref{sec:FADWithMultipleParameters}. 
+Since we now only operate on one cell at the time the implementation of Local AD is simpler than for \texttt{FAD} and \texttt{CJAD}. The value of the AD-variable is now only a scalar and the Jacobian matrices is replaced by a vector of derivatives. For the single phase flow solver in \autoref{ch:FlowSolver}, the vector will be of length one, as each cell only contain one variable (pressure). The implementation is however with \texttt{derivatives} as a vector. This is for the opportunity to implement more complex simulations like a two or three phase simulation where each cell can contain water, oil and/or gas \todo{legg til referanse her om to-fase simulering blir vellykket}. To easily create a new \texttt{LAD}
+\lstinputlisting{code/createVariable.jl}
+The implementation of operators for the \texttt{LAD} struct is done similar as explained in \autoref{ch:Implementation} for \texttt{FAD} and \texttt{CJAD}, but since we only have a vector of derivatives instead of a Jacobian matrix, the implementation is easier and follows the lines of the description from \autoref{sec:FADWithMultipleParameters}. 
 
 Where the implementation of the local AD tool is easier than for \texttt{FAD} and \texttt{CJAD}, there is more work when creating the simulation. Since we do not use discrete gradient and divergence operators, but traverse through the grid cell by cell, we need somewhere to store the resulting values of the residual function. We also need a method to traverse through all the cells and to calculate the contributions from each neighbouring cell. Where the AD part of the code in \texttt{FAD} and \texttt{CJAD} were fully separated from the simulation, for local AD it is more integrated. This means that when using local AD to create the simulation it becomes a more application specific implementation than the method for \texttt{FAD} and \texttt{CJAD}. To create the flow solver from \autoref{ch:FlowSolver} I have chosen to store the calculated residual values in another struct called \texttt{FlowSystem}:
 \lstinputlisting{code/FlowSystem.jl}
@@ -17,6 +19,10 @@ Now that \texttt{FlowSystem} stores the residual values and its Jacobian, we nee
 \lstset{numbers=none}
 \texttt{assembleFlowSystem!} first resets \texttt{eqVal} and \texttt{GlobalJac} such that the structures are equal, but all the values are zero. Then the function begin traversing through the grid and for every cell it iterates through all neighbouring cells. The \texttt{eqVal} and \texttt{globalJac} variables in the \texttt{FlowSystem} struct is updated in line number 6, 8 and 10 in the inner loop. As a reminder, the residual function that \texttt{FlowSystem} will be updated with is the \texttt{presEq} function defined in \autoref{sec:setupGovEq}:
 \lstinputlisting{code/presEq.jl}
-In line number 6, when \texttt{fromCell} and \texttt{toCell} are equal, the first term in the sum in \texttt{presEq}, or the backward Euler term, is calculated. This is performed in an outer function that returns a \texttt{LAD} struct. In differ from \texttt{FAD} and \texttt{CJAD} the method with local AD no longer has AD variables  How this function is implemented can such that the correct index in \texttt{FlowSystem.eqVal} and the diagonal value representing the correct index in FlowSystem.eqVal is added.
+In line number 6, when \texttt{fromCell} and \texttt{toCell} are equal, the first term in the sum in \texttt{presEq}, or the backward Euler term, is calculated. This is performed in an outer function \texttt{timeDerivative} that returns a \texttt{LAD} struct:
+\lstinputlisting{code/timeDerivative.jl}
+In differ from \texttt{FAD} and \texttt{CJAD} the method with local AD no longer has AD variables it can use 
+
+How this function is implemented can such that the correct index in \texttt{FlowSystem.eqVal} and the diagonal value representing the correct index in FlowSystem.eqVal is added.
 
 \todo[inline]{Se på parallellisering for lokal AD?}
