--- a/01_introduction.tex
+++ b/01_introduction.tex
@@ -5,7 +5,7 @@ Automatic differentiation (AD) is a method that automatically calculates exact v
 According to \emph{\cite{SurveyAD}}, the first ideas of the AD concept date back to the 1950s \emph{\citep{nolan1953analytical, beda1959programs}}. More specifically, forward AD was discovered by \emph{\citet{wengert1964simple}}. It is more difficult to date exactly when backward AD was discovered, but the first article containing the essence of backward AD dates back to the 1960s \emph{\citep{boltyanskii1960theory}}. After the initial discovery of AD, further activities hibernated for a couple of years, before the method was rediscovered along with the birth of modern computers and computer languages. The first running computer program that used backward AD, and automatically computed the derivatives, came in 1980 by \emph{\citet{speelpenning1980compiling}}. Further research on the topic was done by, among others, \emph{\citet{griewank1989automatic}}. Today, AD is widely used in many applications. One of them is machine learning that specifically uses the backward AD method to minimize functions. 
 
 \section{Goal of the Thesis}
-This thesis' main focus is to use the forward AD method to solve partial differential equations(PDEs), using the new programming language Julia; and more specifically, solve PDEs that describe flow in porous media. Simulation of flow in porous media can be refer to several applications. Examples include modelling the movement of groundwater reserves, subsurface storage of CO$_2$ to reduce our environmental footprint, and reservoir simulations to maximize the amount of hydrocarbons we can recover from a reservoir. All these are examples of flow under the surface of the earth, but simulation of flow in porous media can also be used to understand flow inside batteries, fuel cells and textiles, for water purifying, and even to describe processes inside our human bodies. However, this thesis will solely look at using AD to simulate flow in oil reservoirs.
+This thesis' main focus is to use the forward AD method to PDEs, using the new programming language Julia; and more specifically, solve PDEs that describe flow in porous media. Simulation of flow in porous media can be refer to several applications. Examples include modelling the movement of groundwater reserves, subsurface storage of CO$_2$ to reduce our environmental footprint, and reservoir simulations to maximize the amount of hydrocarbons we can recover from a reservoir. All these are examples of flow under the surface of the earth, but simulation of flow in porous media can also be used to understand flow inside batteries, fuel cells and textiles, for water purifying, and even to describe processes inside our human bodies. However, this thesis will solely look at using AD to simulate flow in oil reservoirs.
 
 \section{Oil Reservoirs}
 \label{sec:OilReservoirs}
@@ -21,4 +21,4 @@ This is where the problem with the building process of a numerical simulator lie
 This is where the new programming language Julia comes in. Julia is a language built from scratch, with focus on mathematical programming. It is meant to be a language as familiar as MATLAB in terms of mathematical notations, but as fast as C in terms of computational speed. If the developers have managed to do this, it will be possible, in one single language, to create prototypes and demonstrations and then further develop the existing code into high-performing simulators. This could drastically increase the efficiency of creating a simulator, not only for oil reservoirs, but for any other applications. 
 
 \section{Outline of Thesis}
-The thesis will investigate whether Julia is a language that can be used to implement both prototypes and efficient industrial simulators for flow in oil reservoirs. More specifically, it will look at how Julia performs when implementing AD and using it in oil reservoir simulations. The thesis begins by describing the theory behind AD and the difference between backward and forward AD in \autoref{ch:theory}. The chapter continues describing different applications of AD and how we can use forward AD to elegantly solve partial differential equations using a finite-volume method and a discretization of the differentiation operators. The history of Julia, and the reasons why it is supposed to be as fast as C, but as convenient as MATLAB, will be discussed in \autoref{ch:Julia}. Implementation-specific parts, concerning how one can develop high-performing AD tools in Julia, are discussed in \autoref{ch:Implementation}. It will describe two implementations and test them against a third-party AD implementation in Julia and implementations from MRST in MATLAB. The implemented AD libraries will then be used in \autoref{ch:FlowSolver} to test the performance in a prototype simulator from MRST, simulating primary production. Motivated by the results and the characteristics of the problem in \autoref{ch:FlowSolver}, \autoref{ch:LocalAD} describes another implementation of AD in Julia and tests this new AD tool against the previous tools for simulating secondary production. Lastly, \autoref{ch:Conclusion} summarizes the results and analyzes how Julia performs. It also mentions what this thesis has not tested, and outlines problems and challenges that are interesting to look further into.
+The thesis will investigate whether Julia is a language that can be used to implement both prototypes and efficient industrial simulators for flow in oil reservoirs. More specifically, it will look at how Julia performs when implementing AD and using it in oil reservoir simulations. The thesis begins by describing the theory behind AD and the difference between backward and forward AD in \autoref{ch:theory}. The chapter continues describing different applications of AD and how we can use forward AD to elegantly solve partial differential equations using a finite-volume method and a discretization of the differentiation operators. The history of Julia, and the reasons why it is supposed to be as fast as C, but as convenient as MATLAB, will be discussed in \autoref{ch:Julia}. Implementation-specific parts, concerning how one can develop high-performing AD tools in Julia, are discussed in \autoref{ch:Implementation}. It will describe two implementations and test them against a third-party AD implementation in Julia and implementations from MRST. The implemented AD libraries will then be used in \autoref{ch:FlowSolver} to benchmark the performance in a prototype simulator from MRST, simulating primary production. Motivated by the results and the characteristics of the problem in \autoref{ch:FlowSolver}, \autoref{ch:LocalAD} describes another implementation of AD in Julia and benchmarks this new AD tool against the previous tools for simulating secondary production. Lastly, \autoref{ch:Conclusion} summarizes the results and analyzes how Julia performs. It also mentions what this thesis has not tested, and outlines problems and challenges that are interesting to look further into.
