--- a/05_flow_solver_with_AD.tex
+++ b/05_flow_solver_with_AD.tex
@@ -147,7 +147,7 @@ However, our main interest is to observe how the different AD tools perform when
 
 As explained in \autoref{ch:Implementation}, the different types of AD mentioned store the Jacobians differently. Both \texttt{FAD}, \texttt{CJAD} and the two AD implementations in MRST, will, at least eventually, store the Jacobians as a list of sparse matrices where each element in the list is the Jacobian with respect to one primary variable. In this example, this is expected to be a lot more efficient than storing the full $1,002\times 1,002$ Jacobian as  \texttt{ForwardDiff} does.
 
-To benchmark test the different methods, we need to do some extra work to make sure that it is actually the AD we test and not other parts of the code. This is especially important for the code running in Julia, since when we call MATLAB from Julia, it will be a lot of overhead. This means that the setup of the discrete gradient and divergence operators will take longer when performed in MATLAB called from Julia, than when we do it directly in MATLAB. If we want to run the full simulation, it is not possible to separate the AD part fully, but if we only test the main-loop containing the Newton-Raphson method, AD will be a dominating part of the computations together with the linear solver \texttt{f.jac\textbackslash f.val}. This means that we at least will get an indication of how well the AD tools perform compared to each other. To see how the different methods scale as the discretization becomes finer, and the system we solve grow, the benchmark test consist of three different discretizations. The first is the original setup with 10 cells in the spatial directions $x$, $y$, and $z$. This gives a total number of 1,000 cells in the reservoir. Then, I have also tested the implementations for 20 and 30 cells in each spatial direction. The time spent solving the system for the different methods can be seen in \autoref{tab:FlowSolverSpeedTest}.
+To benchmark the different methods, we need to do some extra work to make sure that it is actually the AD we test and not other parts of the code. This is especially important for the code running in Julia, since when we call MATLAB from Julia, it will be a lot of overhead. This means that the setup of the discrete gradient and divergence operators will take longer when performed in MATLAB called from Julia, than when we do it directly in MATLAB. If we want to run the full simulation, it is not possible to separate the AD part fully, but if we only test the main-loop containing the Newton-Raphson method, AD will be a dominating part of the computations together with the linear solver \texttt{f.jac\textbackslash f.val}. This means that we at least will get an indication of how well the AD tools perform compared to each other. To see how the different methods scale as the discretization becomes finer, and the system we solve grow, the benchmark consist of three different discretizations. The first is the original setup with 10 cells in the spatial directions $x$, $y$, and $z$. This gives a total number of 1,000 cells in the reservoir. Then, I have also benchmarked the implementations for 20 and 30 cells in each spatial direction. The time spent solving the system for the different methods can be seen in \autoref{tab:FlowSolverSpeedTest}.
 \begin{table}[H]
     \centering
     \caption{Table with speed tests of different AD methods solving the "Single-Phase Compressible AD Solver" for different discretizations.}
@@ -161,9 +161,9 @@ To benchmark test the different methods, we need to do some extra work to make s
          $30\times30\times30$ & ~ & 158.5s & 133.5s & 133.6s \\ \hline
     \end{tabular}
 \end{table}
-For 10 cells in each spatial direction, it is clear that what was assumed based on the structure of the Jacobian in \autoref{fig:flowSolverJacobian} is true; The  \texttt{ForwardDiff} method takes much longer time than  \texttt{FAD}, \texttt{CJAD} and \texttt{MRST}. This also correspond to the result seen in \autoref{fig:benchmarkADVectorFunction}. Since \texttt{ForwardDiff} already spends over a minute for $10\times 10\times 10$ cells, it is omitted for finer discretizations. \texttt{MRST\_diagonal} is not presented here because there is a bug that cause the method to fail for this specific example, and the only fix we have found makes the method very similar to \texttt{MRST}. According to the results in \autoref{tab:FlowSolverSpeedTest}, the \texttt{MRST} benchmark is a bit faster than  \texttt{FAD}, but \texttt{CJAD} perform very similar to \texttt{MRST}. 
+For 10 cells in each spatial direction, it is clear that what was assumed based on the structure of the Jacobian in \autoref{fig:flowSolverJacobian} is true; The  \texttt{ForwardDiff} method takes much longer time than  \texttt{FAD}, \texttt{CJAD} and \texttt{MRST}. This also correspond to the result seen in \autoref{fig:benchmarkADVectorFunction}. Since \texttt{ForwardDiff} already spends over a minute for $10\times 10\times 10$ cells, it is omitted for finer discretizations. \texttt{MRST\_diagonal} is not presented here because there is a bug that cause the method to fail for this specific example, and the only fix we have found makes the method very similar to \texttt{MRST}. According to the results in \autoref{tab:FlowSolverSpeedTest}, the \texttt{CJAD} method is a bit faster than  \texttt{FAD}, and it perform similar to \texttt{MRST} method. 
 
-It is, although, still some uncertainty in these numbers as we do not know if the linear solver in MATLAB and Julia perform equally well. In addition, another factor that can affect the result, is that for the current hardware these benchmark tests are running on, the computations are so demanding that the hardware becomes warm. This can cause the performance of the hardware to decrease and ruin the test results. To remove the uncertainty of both the linear solver and the hardware heating up, we can perform another benchmark test. Instead of solving the linear system \texttt{f.jac\textbackslash f.val} and continuing to the next Newton-Raphson iteration until it converges, and then onto a new time step, we only assemble the first residual function multiple times. In this way we only test the AD part of the problem. The time the computer uses to calculate the residual function value and Jacobian will not depend on what type of numbers we have, only on the structure of the matrices in the Jacobians. Since the structure is the same throughout the whole simulation, this test will still be relevant to figure out which AD-implementation is best to solve this specific problem. Since the test does the same calculation over and over again, we need to be aware that it could have been the case that the compiler figured out that there is no need to perform all calculations, and that it is enough doing it only once. However, this is tested and is not the case. \autoref{tab:FlowSolverAssemblyTest} shows the three methods assembling the first residual function of the simulation 100 times.
+It is, although, still some uncertainty in these numbers as we do not know if the linear solver in MATLAB and Julia perform equally well. In addition, another factor that can affect the result, is that for the current hardware these benchmarks are running on, the computations are so demanding that the hardware becomes warm. This can cause the performance of the hardware to decrease and ruin the benchmark results. To remove the uncertainty of both the linear solver and the hardware heating up, we can perform another benchmark. Instead of solving the linear system \texttt{f.jac\textbackslash f.val} and continuing to the next Newton-Raphson iteration until it converges, and then onto a new time step, we only assemble the first residual function multiple times. In this way we only benchmark the AD part of the problem. The time the computer uses to calculate the residual function value and Jacobian will not depend on what type of numbers we have, only on the structure of the matrices in the Jacobians. Since the structure is the same throughout the whole simulation, this benchmark will still be relevant to figure out which AD-implementation is best to solve this specific problem. Since the benchmark does the same calculation over and over again, we need to be aware that it could have been the case that the compiler figured out that there is no need to perform all calculations, and that it is enough doing it only once. However, this is tested and is not the case. \autoref{tab:FlowSolverAssemblyTest} shows the three methods assembling the first residual function of the simulation 100 times.
 \begin{table}[htb]
     \centering
     \caption{Table with speed tests of different AD methods assembling the "Single-Phase Compressible AD Solver" residual function 100 times for different discretizations.}
@@ -177,4 +177,4 @@ It is, although, still some uncertainty in these numbers as we do not know if th
          $30\times30\times30$ & 44.2s& 17.2s& 16.5s \\ \hline
     \end{tabular}
 \end{table}
-It shows the same tendency as \autoref{tab:FlowSolverSpeedTest}, where \texttt{CJAD} and \texttt{MRST} are still considerable faster than \texttt{FAD}. However, in this test, \texttt{MRST} is a bit faster than \texttt{CJAD} for the highest number of cells. There are however small differences and since there are some uncertainty when testing computational speed on computers, a safe conclusion is that for this "Single-Phase Compressible AD Solver" example, the \texttt{MRST} and \texttt{CJAD} implementation perform equally good.
+It shows the same tendency as \autoref{tab:FlowSolverSpeedTest}, where \texttt{CJAD} and \texttt{MRST} are still considerable faster than \texttt{FAD}. However, in this benchmark, \texttt{MRST} is a bit faster than \texttt{CJAD} for the highest number of cells. There are however small differences and since there are some uncertainty when benchmarking computational speed on computers, a safe conclusion is that for this "Single-Phase Compressible AD Solver" example, the \texttt{MRST} and \texttt{CJAD} implementation perform equally good.
